force-app/main/default/objects/Industry_Focus__c/Industry_Focus__c.object-meta.xml
<CustomObject>
    <label>Industry Focus</label>
    <nameField>
        <displayFormat>C.IF-{00000}</displayFormat>
        <label>Industry Focus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Industry Focus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>