force-app/main/default/objects/Industry_Focus__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Invalid Industry Value</errorMessage>
        <filterItems>
            <field>Industry__c.Contact__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Industry Focus</relationshipLabel>
    <relationshipName>Contact_Industries</relationshipName>
    <type>Lookup</type>
</CustomField>