force-app/main/default/objects/Industry_Focus__c/fields/Industry_Focus_Key__c.field-meta.xml
<CustomField>
    <fullName>Industry_Focus_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Industry Focus Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>