force-app/main/default/objects/Industry_Focus__c/fields/Industry_Group_REPORTING__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group_REPORTING__c</fullName>
    <formula>Industry__r.Industry_Group_REPORTING__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Group (REPORTING)</label>
    <type>Text</type>
</CustomField>