force-app/main/default/objects/Industry_Focus__c/validationRules/Industry_Focus_Prevent_Contact_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_Focus_Prevent_Contact_Change</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Contact__c )</errorConditionFormula>
    <errorMessage>Only Industry is editable.</errorMessage>
</ValidationRule>